# monitoring-backend

./: .dockerignore  .env-template  .gitignore  Dockerfile  README.md  docker-compose.yaml  lastfile.txt  pyproject.toml  wb_file_manager_draft.py
clickhouse/: config.xml  users.xml
clickhouse/config.d/: logs_ttl.xml
clickhouse/users.d/: default-user.xml
searcher/: celery_main.py  check.py  check_proxies.py  clickhouse_playground.py  dl_requests_patch.py  gen_valid_token.py  playground.py  purge.py  settings.py  setup.py  transfer_to_temp.py
searcher/actions/: requests_parse.py  wb_report_task.py
searcher/alembic/versions/: 146c6819faa7_.py  1c01a368417b_.py  4c678e8f5275_.py  9414672ee87c_.py  980c76e370bb_.py  c226e3e633d2_.py
searcher/api_services/: wb_data.py
searcher/clickhouse_db/: get_async_connection.py
searcher/parser/: aggregate_supplier.py  collect_subjects.py  db_config_loader.py  get_init_data.py  get_query_subject.py  get_single_query_data.py  optimize_tables.py  parser_main.py  save_to_db_worker.py
searcher/postgresql_db/: __init__.py  base.py
searcher/postgresql_db/models/: __init__.py  city.py  request.py  request_product.py
searcher/server/: server_main.py
searcher/server/auth_token/: check_token.py  token_scheme.py
searcher/server/funcs/: .~lock.test.xlsx#  get_best_similar.py  get_keywords_data.py  get_preset_data.py  get_product_query_data.py  get_trends_report.py  get_wb_id_external_report.py  monitoring_oracle_new_recount.py  test.xlsx  (+6 more)
searcher/service/: log_alert.py  wb_report_downloader.py
searcher/utils/: redis.py
(+10 files in other folders)
