[tool.poetry]
name = "wb-search"
version = "0.1.0"
description = ""
authors = ["zwickvitaly <zwickvitaly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
aiohttp = "^3.10.10"
fastapi = {extras = ["all"], version = "^0.115.2"}
python-dotenv = "^1.0.1"
setuptools = "^75.1.0"
pytz = "^2024.2"
aiofiles = "^24.1.0"
celery = {extras = ["redis"], version = "^5.4.0"}
clickhouse-connect = "^0.8.6"
pyjwt = "^2.9.0"
lz4 = "4.3.3"
psutil = "^6.1.0"
aiogram = "^3.15.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
